# murom-ROS

./: README.md
murom/murom/: CMakeLists.txt  package.xml
murom/murom_bringup/: CMakeLists.txt  package.xml
murom/murom_bringup/env-hooks/: 25.murom.sh.em
murom/murom_bringup/interactions/: documentation.interactions  pairing.interactions  visualisation.interactions
murom/murom_bringup/launch/: 3dsensor.launch  concert_client.launch  elev_rtab2.launch  laser.launch  minimal.launch  rgbd_mapping_kinect2.launch  rtab_mapping.launch  rtab_mapping2.launch
murom/murom_bringup/launch/includes/: capabilities.launch.xml  description.launch.xml  mobile_base.launch.xml  netbook.launch.xml  robot.launch.xml  zeroconf.launch.xml
murom/murom_bringup/launch/includes/murom/: mobile_base.launch.xml
murom/murom_bringup/param/: zeroconf.yaml
murom/murom_bringup/param/capabilities/: defaults_tb2.yaml
murom/murom_bringup/param/defaults/: capability_providers.yaml
murom/murom_bringup/param/kinect/: capability_providers.yaml
murom/murom_bringup/param/murom/: capability_providers.yaml  diagnostics.yaml
murom/murom_capabilities/: CMakeLists.txt  package.xml
murom/murom_capabilities/interfaces/: MuromBringup.yaml
murom/murom_capabilities/providers/: depthimage_to_laserscan.yaml  diagnostics.yaml  differential_mobile_base.yaml  murom2_bringup.yaml  murom_bringup.yaml  rgbd_sensor.yaml  robot_state_publisher.yaml
murom/murom_capabilities/providers/launch/: depthimage_to_laserscan.launch  diagnostics.launch  rgbd_sensor.launch  robot_state_publisher.launch  turtlebot2_bringup.launch  turtlebot_bringup.launch
murom/murom_control/: CMakeLists.txt  package.xml
murom/murom_control/launch/: keyboard_teleop.launch
murom/murom_description/: CMakeLists.txt  package.xml
murom/murom_description/launch/: urdf.rviz  view_murom.launch
murom/murom_description/meshes/: found.STL  head.STL  lmwheel.STL  mwheell.STL  mwheelr.STL  neck.STL  pillar.STL  rmwheel.STL  supwheel.STL  torsodown.STL  torsoup.STL  wheel.STL
murom/murom_description/robots/: murom_hexagons_kinect.urdf.xacro
murom/murom_description/test/: test_urdf.cpp
murom/murom_description/urdf/: diff.xacro  murom.gv  murom.urdf  murom.urdf.xacro  murom.urdf_old  murom.urdf_old.xacro  murom1.urdf  murom_gazebo.urdf.xacro  murom_library.urdf.xacro  murom_properties.urdf.xacro  murom_t.urdf  wheel.urdf.xacro
murom/murom_description/urdf/kinect/: kinect.urdf.xacro  kinect.urdf.xacro~  kinect2.urdf.xacro  tmp.urdf
murom/murom_description/urdf/sensors/: kinect.urdf.xacro
murom/murom_description/urdf/stacks/: hexagons.urdf.xacro
murom/murom_gazebo/: CMakeLists.txt  package.xml
murom/murom_gazebo/config/: murom_gazebo_control.yaml
murom/murom_gazebo/launch/: 3dsensor.launch  amcl.launch  gmapping.launch  murom_full.launch  murom_gazebo_control.launch  murom_world.launch  rtab_mapping.launch
murom/murom_gazebo/launch/includes/: kinect.launch.xml  move_base.launch.xml  move_base_turtle.launch.xml
murom/murom_gazebo/maps/: willo.yaml
murom/murom_gazebo/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
murom/murom_navigation/: CMakeLists.txt  package.xml
murom/murom_navigation/env-hooks/: 25.murom-navigation.sh.em
murom/murom_navigation/laser/: laser_amcl_demo.launch  laser_gmapping_demo.launch  move_base_laser.launch
murom/murom_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
murom/murom_navigation/launch/includes/: velocity_smoother.launch.xml
murom/murom_node/: CMakeLists.txt  package.xml
murom/murom_node/config/: murom_control.yaml
murom/murom_node/include/murom_node/: murom.h  murom_ros.h
murom/murom_node/launch/: full.launch  minimal.launch  murom_control.launch  murom_drive.launch
murom/murom_node/param/: base.yaml.autosave  diagnostics.yaml.autosave
murom/murom_node/plugins/: nodelet_plugins.xml
murom/murom_node/src/: murom_node.cpp
murom/murom_node/src/nodelet/: murom_nodelet.cpp
