<package>
  <name>murom_bringup</name>
  <version>0.1.1</version>
  <description>
     murom_bringup provides roslaunch scripts for starting the Murom base functionality. 
  </description>
  <author>Mivar RoboTeam</author>
  <maintainer email="i.trofimov@mivar.ru">Mivar RoboTeam</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_bringup</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>zeroconf_avahi</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
<!--  <run_depend>kobuki_capabilities</run_depend>-->
  <run_depend>murom_node</run_depend>
<!--  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>-->
  <run_depend>create_node</run_depend>
  <run_depend>murom_capabilities</run_depend>
  <run_depend>murom_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>freenect_launch</run_depend>
<!--  <run_depend>laptop_battery_monitor</run_depend>-->
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
</package>
